--- a/package.json
+++ b/package.json
@@ -19,5 +19,11 @@
   "homepage": "https://github.com/HalisterFernando/typescript-exercises#readme",
   "dependencies": {
     "ts-node": "^10.9.1"
+  },
+  "devDependencies": {
+    "@types/express": "^4.17.15",
+    "@types/node": "^18.11.17",
+    "ts-node-dev": "^2.0.0",
+    "typescript": "^4.9.4"
   }
 }
